--- a/bin/mainwindow.ui
+++ b/bin/mainwindow.ui
@@ -6,26 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1457</width>
-    <height>678</height>
+    <width>1400</width>
+    <height>690</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>FuME - FuPa Match Explorer</string>
   </property>
-  <property name="unifiedTitleAndToolBarOnMac">
-   <bool>false</bool>
-  </property>
   <widget class="QWidget" name="centralWidget">
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,0,0">
-    <property name="leftMargin">
-     <number>12</number>
-    </property>
+   <layout class="QGridLayout" name="gridLayout_3">
     <property name="spacing">
      <number>5</number>
     </property>
@@ -123,6 +112,12 @@
     </item>
     <item row="0" column="0" rowspan="2" colspan="2">
      <widget class="QLabel" name="label">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
        <string/>
       </property>
