--- a/bin/mainwindow.ui
+++ b/bin/mainwindow.ui
@@ -202,6 +202,20 @@
          </property>
         </spacer>
        </item>
+       <item>
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Reservierungsstatus</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; background-color:#b0ea99;&quot;&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;/span&gt; erfolgreich&lt;br /&gt;&lt;span style=&quot; background-color:#eabdbe;&quot;&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;/span&gt; besetzt&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
@@ -340,9 +354,24 @@
     </widget>
     <addaction name="menuDatum"/>
     <addaction name="separator"/>
+    <addaction name="actionAnsichtSpiele"/>
+    <addaction name="actionAnsichtReservierungen"/>
+    <addaction name="separator"/>
     <addaction name="actionLog"/>
    </widget>
+   <widget class="QMenu" name="menuBearbeiten">
+    <property name="title">
+     <string>Bearbeiten</string>
+    </property>
+    <addaction name="actionSpiele"/>
+    <addaction name="actionImportieren"/>
+    <addaction name="separator"/>
+    <addaction name="actionReservierung"/>
+    <addaction name="actionHinzuf_gen_reservieren"/>
+    <addaction name="actionL_schen"/>
+   </widget>
    <addaction name="menuDatei"/>
+   <addaction name="menuBearbeiten"/>
    <addaction name="menuAnsicht"/>
   </widget>
   <action name="actionUeber">
@@ -403,6 +432,56 @@
    </property>
    <property name="menuRole">
     <enum>QAction::AboutQtRole</enum>
+   </property>
+  </action>
+  <action name="actionSpiele">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Spiel</string>
+   </property>
+  </action>
+  <action name="actionImportieren">
+   <property name="text">
+    <string>importieren (aus FuPa)</string>
+   </property>
+  </action>
+  <action name="actionReservierung">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Reservierung</string>
+   </property>
+  </action>
+  <action name="actionHinzuf_gen_reservieren">
+   <property name="text">
+    <string>hinzufügen (reservieren)</string>
+   </property>
+  </action>
+  <action name="actionL_schen">
+   <property name="text">
+    <string>löschen</string>
+   </property>
+  </action>
+  <action name="actionAnsichtSpiele">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Spiele</string>
+   </property>
+  </action>
+  <action name="actionAnsichtReservierungen">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Reservierungen</string>
    </property>
   </action>
  </widget>
