added "reservation view"

--- a/bin/mainwindow.ui
+++ b/bin/mainwindow.ui
@@ -205,14 +205,14 @@
        <item>
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>Reservierungsstatus</string>
+          <string>Reservierungsstatus:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; background-color:#b0ea99;&quot;&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;/span&gt; erfolgreich&lt;br /&gt;&lt;span style=&quot; background-color:#eabdbe;&quot;&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;/span&gt; besetzt&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; background-color:#b0ea99;&quot;&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;/span&gt; erfolgreich&lt;br /&gt;&lt;span style=&quot; background-color:#eabdbe;&quot;&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;/span&gt; fehlgeschlagen&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
         </widget>
        </item>
