--- a/bin/mainwindow.ui
+++ b/bin/mainwindow.ui
@@ -42,7 +42,7 @@
     <item row="3" column="1">
      <widget class="QPushButton" name="pushButton_2">
       <property name="text">
-       <string>Galerie hochladen</string>
+       <string>Galerie erstellen</string>
       </property>
      </widget>
     </item>
